# retentioniq

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  dagster_workspace.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: agents.yaml  causal.yaml  data.yaml  features.yaml  models.yaml  monitoring.yaml  optimization.yaml
docs/: ARCHITECTURE.md  PRD.md  RUNBOOK.md  SETUP.md
notebooks/: 01_eda.ipynb  02_survival_analysis.ipynb  03_causal_dag.ipynb  04_treatment_effects.ipynb  05_optimization.ipynb  06_agent_prototype.ipynb
scripts/: generate_architecture_diagram.py  generate_franchise_data.py  init_db.py  init_extensions.sql
src/: __init__.py  exceptions.py
src/agents/: __init__.py  graph.py  guardrails.py  memory.py  tools.py
src/agents/eval/: __init__.py  evaluator.py
src/api/: __init__.py  main.py
src/causal/: __init__.py  dag.py  effects.py  forests.py
src/data/: __init__.py
src/data/bronze/: __init__.py  ingestion.py
src/data/gold/: __init__.py  aggregation.py
src/data/quality/: __init__.py  expectations.py
src/data/silver/: __init__.py  cleaning.py
src/features/: __init__.py  engineering.py  store.py
src/models/: __init__.py
src/models/churn/: __init__.py  trainer.py
src/models/ltv/: __init__.py  estimator.py
src/models/survival/: __init__.py  cox.py
src/monitoring/: __init__.py  dashboard.py  drift.py
src/optimization/: __init__.py  allocator.py  stochastic.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_causal.py  test_causal_dag.py  test_data_quality.py  test_features.py  test_guardrails.py  test_models.py
